# polypolars

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: bench_build.py
docs/: index.md  quickstart.md  roadmap.md
docs/api/: factory.md  io.md  schema.md  testing.md
docs/examples/: custom_providers.md  nested.md
examples/: basic_usage.py  run_doc_examples.py
polypolars/: __init__.py  cli.py  exceptions.py  factory.py  io.py  protocols.py  schema.py  testing.py
tests/: __init__.py  cli_models.py  conftest.py  test_cli.py  test_exceptions.py  test_factory.py  test_io.py  test_nested.py  test_pydantic.py  test_schema.py  test_schema_edge_cases.py  test_testing.py
