[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polypolars"
version = "0.1.0"
description = "Generate Polars DataFrames using polyfactory for testing and development"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Odos Matthews", email = "odosmatthews@gmail.com" }
]
keywords = ["polars", "testing", "factory", "polyfactory", "dataframe", "mock-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "polyfactory>=2.0.0",
    "polars>=0.20.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pydantic>=2.0.0",
    "ruff>=0.1.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.scripts]
polypolars = "polypolars.cli:main"

[project.urls]
Homepage = "https://github.com/eddiethedean/polypolars"
Documentation = "https://github.com/eddiethedean/polypolars#readme"
Repository = "https://github.com/eddiethedean/polypolars"
Issues = "https://github.com/eddiethedean/polypolars/issues"

[tool.hatch.build.targets.wheel]
packages = ["polypolars"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v"]

[tool.coverage.run]
source = ["polypolars"]
omit = ["*/tests/*", "*/benchmarks/*"]

[tool.coverage.report]
fail_under = 78
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501"]
